--- a/assets/css/rtl/woocommerce/general.scss
+++ b/assets/css/rtl/woocommerce/general.scss
@@ -32,4 +32,41 @@
 			text-align: left;
 		}
 	}
+
+	#shipping_method {
+		padding-right: 0;
+		text-align: left;
+
+		input[type="radio"] {
+			float: left;
+			margin-left: 0;
+			margin-right: 7px;
+		}
+	}
+
+	.cart-collaterals {
+		th,
+		td {
+			&:nth-child(2) {
+				text-align: left;
+			}
+		}
+	}
+
+	// Checkout page
+	#order_review {
+		th,
+		td {
+			&:last-child {
+				text-align: left;
+			}
+		}
+	}
+
+	.payment_box{
+		&:before {
+			left: auto;
+			right: 30px;
+		}
+	}
 }
